selfhost/test/parser/invocation_error_invalid_typearg.out
Error at %FILE_NAME%:1:6
Unexpected token ',':
  |  foo<A, 1>
          ^